Modernize NIO2 use in testtool
Use Path.of() insteaf of Paths.get().

Change-Id: Ic98063089450c94578af785d471b9a5ebd595d9f
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>